# SQPnP

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
examples/sqpnp/: CMakeLists.txt  main.cpp
examples/timing/: CMakeLists.txt  main.cpp
examples/utils/: GenerateSyntheticPoints.h  ReprojectionError.h
sqpnp/: CMakeLists.txt
sqpnp/include/cv/sqpnp/: sqpnp.h
sqpnp/include/sqpnp/: solvepnp.h
sqpnp/src/: solvepnp.cpp  solvesqp.cpp  solvesqp.h  sqpnp.cpp
